rgbds-0.6.1/test/asm/incbin-end-bad.err
error: incbin-end-bad.asm(3):
    Specified range in INCBIN is out of bounds (123 + 1 > 123)
error: Assembly aborted (1 error)!
