rgbds-0.6.1/test/asm/incbin-end-bad.asm
SECTION "Bad", ROM0

INCBIN "data.bin", 123, 1
